2005/09/06	muppetman

	* examples/cellrenderer_date.pl, AUTHORS: Modified patch from Daniel
	  Kasak (dkasak at nusconsulting dot com dot au) ensures that the
	  calendar popup never appears offscreen.

2005/09/05	kaffeetisch

	* MANIFEST, META.yml: Remove META.yml.

	* doctypes: Add GdkPixbuf_noinc.

	* t/PangoRenderer.t: Remove draw_trapezoid test.

	* Gtk2.pm, Makefile.PL, README, NEWS: Stable release 1.100.

2005/07/31	muppetman

	* t/GtkTreeModel.t, t/GtkTreeView.t, xs/GtkFileChooser.xs,
	  xs/GtkTreeModel.xs, xs/GtkTreeView.xs, xs/GtkTreeViewColumn.xs,
	  AUTHORS: Patch from HE fixes up some bad version checks.  Features
	  added in gtk+ 2.7.3 were incorrectly marked as 2.7.0, breaking
	  testing with 2.7.[0-2].

	* xs/GtkSelection.xs: fix some pointer signedness warnings.

2005/07/27	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.093.

2005/07/27	kaffeetisch

	* t/GdkPixbuf.t: Make get_image() more tolerant.

	* t/GtkAction.t: Correct skip message.

	* t/GtkIconTheme.t: Update copyright.

	* t/GtkIconView.t: Make the position test less fragile.

	* t/PangoRenderer.t: Wrap draw_trapezoid() inside a SKIP block
	till it gets fixed.

2005/07/26	muppetman

	* CodeGen.pm: Gtk2::CodeGen is now just a wrapper for Glib::CodeGen.

2005/07/21	muppetman

	* xs/GtkDialog.xs, AUTHORS: Patch from lonefox at welho dot com
	changes Gtk2::Dialog::set_alternative_button_order() to accept
	string constants as well as numeric response ids.

	* t/GtkDialog.t: Test response strings as well as numbers.

2005/07/19	kaffeetisch

	* pm/TestHelper.pm: Correct NAME section to read Gtk2::TestHelper
	instead of Gtk2::Test::Helper.

	* t/GtkFileChooser.t, xs/GtkFileChooser.xs: Bind
	gtk_file_chooser_[sg]et_do_overwrite_confirmation.

	* t/GtkTreeModel.t, xs/GtkTreeModel.xs: Bind and test
	gtk_tree_row_reference_get_model.

	* t/GtkTreeView.t, xs/GtkTreeView.xs: Bind and test
	gtk_tree_view_get_visible_range.
